# cutecom

./: CMakeLists.txt  cutecommdlg.ui  qcppdialogimpl.cpp  qcppdialogimpl.h
